<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/principioHowTo"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/acciones"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/accion1"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contentHowTo1"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/accion2"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contentHowTo2"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/accion3"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contentHowTo3"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/accion4"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contentHowTo4"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            />

    </LinearLayout>



</ScrollView>