<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout_how_to"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/principioHowTo"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/acciones"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/accion1"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contentHowTo1"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/accion2"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contentHowTo2"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/accion3"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contentHowTo3"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="10sp"
            android:text="@string/preferenciaTiempoTitulo"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/preferenciaTiempoContenidoAmpliado"
            android:textSize="15sp"
            android:layout_marginStart="15dp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="10sp"
            android:text="@string/preferenciaAvisoSalidaTitulo"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/preferenciaAvisoSalidaContenidoAmpliado"
            android:textSize="15sp"
            android:layout_marginStart="15dp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="10sp"
            android:text="@string/preferenciaTemperaturaTitulo"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/preferenciaTemperaturaContenidoAmpliado"
            android:textSize="15sp"
            android:layout_marginStart="15dp"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/accion4"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contentHowTo4"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp" />

    </LinearLayout>



</ScrollView>

<ListView
android:id="@+id/list_view_how_to"
android:layout_marginTop="30dp"
android:layout_width="300dp"
android:layout_height="match_parent"
android:layout_gravity="left"
android:background="#007095"
android:choiceMode="singleChoice"
android:divider="#005875"
android:dividerHeight="2dp" >



</ListView>

    </android.support.v4.widget.DrawerLayout>