<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.asimov.sportroutes.ListaDeRutasActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="79dp"
        android:id="@+id/tablaRutas">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/RutaString"
                android:id="@+id/tituloRuta"
                android:layout_column="0"
                android:textSize="15dip"
                android:paddingLeft="5dp"
                android:textIsSelectable="false"
                android:paddingTop="2dp"
                android:paddingRight="5dp"
                android:paddingBottom="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/ultimoTiempo"
                android:id="@+id/tituloUltimoT"
                android:layout_column="1"
                android:textSize="15dip"
                android:paddingLeft="5dp"
                android:paddingTop="2dp"
                android:paddingRight="2dp"
                android:paddingBottom="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/mejorTiempo"
                android:id="@+id/tituloMejorT"
                android:layout_column="2"
                android:textSize="15dip"
                android:paddingLeft="5dp"
                android:paddingTop="2dp"
                android:paddingRight="2dp"
                android:paddingBottom="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/clima"
                android:id="@+id/tituloClima"
                android:layout_column="3"
                android:textSize="15dip"
                android:paddingLeft="5dp"
                android:paddingTop="2dp"
                android:paddingRight="2dp"
                android:paddingBottom="5dp" />

        </TableRow>

    </TableLayout>
</RelativeLayout>
