<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/tableLayout"
        android:layout_alignParentStart="true"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:layout_alignBottom="@+id/textViewCiudad">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_span="5"
                android:textSize="25sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tiempo"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:padding="5dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mejorTiempo"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_column="2"
                android:padding="5dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textMejor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_column="3"
                android:padding="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:text="@string/ultimoTiempo"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_column="2"
                android:padding="5dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textUltimo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_column="3"
                android:padding="5dp" />
        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/imageViewClima"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:contentDescription="@string/clima"
        android:src="@android:drawable/ic_menu_gallery"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textViewTemperatura"
        android:text="@string/calculando"
        android:layout_marginTop="56dp"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/imageViewClima"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textViewCiudad"
        android:text="@string/calculando"
        android:layout_below="@+id/textViewTemperatura"
        android:layout_alignParentEnd="true"
        android:textSize="12sp" />

</RelativeLayout>
